<resources>
    <string name="app_name">Warehouse</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="request_number">Request number</string>
    <string name="product_name">Product name</string>
    <string name="textview">TextView</string>
    <string name="amount">Amount</string>
    <string name="warehouse_place">Warehouse place</string>
    <string name="title_activity_sign_up_in">SignUpInActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>